--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <img src="./img/wonyoung-ive-kpop-8k-wallpaper-uhdpaper.com-233@5@i.jpg" 
+       alt="Background" class="background">
+
   <h1>TO-DO APP</h1>
 
   <div class="wrapper">
     <form>
-      <input type="text" id="todo-input" placeholder="Write Today Task To Complete" autocomplete="off">
+      <input type="text" id="todo-input" 
+             placeholder="Write Today Task To Complete" 
+             autocomplete="off">
       <button id="add-todo">ADD</button>
     </form>
 
